--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,12 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
+set-environment -g HOME $HOME
+set-environment -g HTTP_PROXY $HTTP_PROXY
+set-environment -g http_proxy $HTTP_PROXY
+set-environment -g HTTPS_PROXY $HTTPS_PROXY
+set-environment -g https_proxy $HTTPS_PROXY
+
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-copycat'
@@ -12,12 +18,11 @@ set -g @plugin 'seebi/tmux-colors-solarized'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
-#set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 
 set-option -g history-limit 10000
 set -s escape-time 0
 setw -g aggressive-resize on
-set-option -g default-shell /usr/bin/bash
 set-window-option -g mode-keys vi
 setw -g mode-keys vi
 
@@ -42,17 +47,12 @@ bind-key c new-window\; split-window -h -c "#{pane_current_path}"\; split-window
 # Solarized theme
 set -g @plugin 'seebi/tmux-colors-solarized'
 set -g @colors-solarized 'dark'
-# powerline
-source ~/.local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf
-#set-option -g default-terminal "screen-256color"
-set-option -g status-position top
+set-option -g status-position bottom
 set-option -g status on
 #set-option -g status-interval 4
-#set-option -g status-justify "centre"
+#set-option -g status-justify "center"
 #set-option -g status-left-length 100
 #set-option -g status-right-length 100
-set-option -g status-left "#(~/.local/bin/powerline left)"
-set-option -g status-right "#(~/.local/bin/powerline right)"
 #set -g status-left "session: #S || window: #I || pane: #P"
 
 # Start windows and panes at 1, not 0
@@ -102,13 +102,13 @@ set -ga terminal-override ',rxvt-uni*:XT:Ms=\E]52;%p1%s;%p2%s\007'
 set-window-option -g xterm-keys on
 
 #### Clipboard integration
-### Selection with mouse should copy to clipboard right away, in addition to the default action.
-unbind -n -T copy-mode-vi MouseDragEnd1Pane
-bind -T copy-mode-vi MouseDragEnd1Pane send -X copy-selection-and-cancel\; run "tmux save-buffer - | sed 's/  *$//' | xclip -i -sel clipboard > /dev/null"
-###
-#### Middle click to paste from the clipboard
-unbind-key MouseDown2Pane
-bind-key -n MouseDown2Pane run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
+#### Selection with mouse should copy to clipboard right away, in addition to the default action.
+#unbind -n -T copy-mode-vi MouseDragEnd1Pane
+#bind -T copy-mode-vi MouseDragEnd1Pane send -X copy-selection-and-cancel\; run "tmux save-buffer - | sed 's/  *$//' | xclip -i -sel clipboard > /dev/null"
+####
+##### Middle click to paste from the clipboard
+#unbind-key MouseDown2Pane
+#bind-key -n MouseDown2Pane run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
 ##
 ###===Double Left Mouse Button Select & Copy (Word)====================
 #bind -T copy-mode-vi DoubleClick1Pane select-pane \; send-keys -X select-word \; send-keys -X copy-pipe "xclip -in -sel primary"
@@ -120,8 +120,7 @@ bind-key -n MouseDown2Pane run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; 
 ##bind-key -T copy-mode-vi 'y' send-keys -X copy-selection-and-cancel
 ##bind-key p paste-buffer
 
-#set-option -ga terminal-overrides ",st-256color:Tc"
-#set -g default-terminal "st-256color"
+set -g default-terminal "xterm-256color"
 
 set -g @yank_action 'copy-pipe-and-cancel'
 set -g @yank_with_mouse on
@@ -140,13 +139,12 @@ set -g @continuum-restore 'on'
 set -g @resurrect-strategy-vim 'session'
 #set -g @resurrect-capture-pane-contents 'on'
 
-set-option -g default-command "/bin/bash"
-set-option -g default-shell "/bin/bash"
+set-option -g default-command "/usr/bin/zsh"
+set-option -g default-shell "/usr/bin/zsh"
 
-run-shell ~/.tmux/plugins/tmux-yank/yank.tmux
+run-shell ~/.tmux/plugins/tmux-copycat/copycat.tmux
 run-shell ~/.tmux/plugins/tmux-resurrect/resurrect.tmux
 run-shell ~/.tmux/plugins/tmux-continuum/continuum.tmux
-run-shell "powerline-daemon -q ; powerline-config tmux setup"
 
 # EOF
 run '~/.tmux/plugins/tpm/tpm'
