--- a/.tmux.conf
+++ b/.tmux.conf
@@ -89,17 +89,23 @@ unbind-key -n C-k
 set -g automatic-rename off
 set -g allow-rename off
 set-window-option -g allow-rename off
+set -g window-status-current-style 'bg=#66ff66,fg=#000000'
 
 #set-option -g automatic-rename-format '#{b:pane_current_path}'
 set-option -g set-clipboard on
 ## Enable mouse mode (tmux 2.1 and above)
 set -g mouse on
 
+setw -g word-separators ' @"=()[]'
+setw -ag word-separators "'"
+
 # Sane scrolling
 # fixes shift-pageup/shift-pagedown
 set -ga terminal-overrides 'xterm*:smcup@:rmcup@'
 set -ga terminal-override ',rxvt-uni*:XT:Ms=\E]52;%p1%s;%p2%s\007'
 set-window-option -g xterm-keys on
+bind-key -n Home send Escape "OH"
+bind-key -n End send Escape "OF"
 
 #### Clipboard integration
 #### Selection with mouse should copy to clipboard right away, in addition to the default action.
